--- a/CSGeometryTest/CSGeometries/CSGeometries.csproj
+++ b/CSGeometryTest/CSGeometries/CSGeometries.csproj
@@ -39,9 +39,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clip.cs" />
     <Compile Include="ColorModels\ColorD.cs" />
     <Compile Include="ColorModels\HSV.cs" />
     <Compile Include="CSGeometries.cs" />
+    <Compile Include="Line.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
